--- a/dummy.html
+++ b/dummy.html
@@ -20,7 +20,7 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <div class="shrink-on-hover bg-primary p-4 text-white">
+        <div class="shrink-on-hover bg-success p-4 text-white">
           <h3>Hover to Shrink</h3>
           <p>This is the content of the div.</p>
         </div>
